# bpaworkflow

./: .env  .gitignore  .travis.yml  Dockerfile-base  Dockerfile-builder  Dockerfile-dev  Dockerfile-prod  README.md  bpa-ingest.key  bpa-ingest.pub  develop.sh  docker-build.key  docker-build.pub  docker-compose-build.yml  docker-compose-common.yml  docker-compose-nginx.yml  docker-compose-prod.yml  docker-compose.yml  docker-entrypoint-build.sh  docker-entrypoint.sh  travis-build.sh  travis-prodbuild.sh
bpaworkflow/: manage.py  pyproject.toml  setup.py
bpaworkflow/bpaworkflow/: apps.py  celery.py  models.py  settings.py  tasks.py  urls.py  validate.py  views.py
bpaworkflow/bpaworkflow/migrations/: 0001_initial.py
bpaworkflow/bpaworkflow/static/bpaworkflow/: bpaworkflow.css  bpaworkflow.js
bpaworkflow/bpaworkflow/templates/bpaworkflow/: index.html
bpaworkflow/tests/test_data/: 79639_GAP_AGRF_PAE47351_checksums.md5  79639_GAP_AGRF_PAE47351_metadata.xlsx  README
bpaworkflow/tests/test_data/flagged/E2001_file_convention/: README
bpaworkflow/tests/test_data/flagged/E3001_metadata_missing_mapped_column/: 79639_GAP_AGRF_PAE47351_metadata.xlsx
bpaworkflow/tests/test_data/flagged/E3001_no_runid_column/: 79639_GAP_AGRF_PAE47351_metadata.xlsx
bpaworkflow/tests/test_data/flagged/E3002_metadata_duplicate_column/: 79639_GAP_AGRF_PAE47351_metadata.xlsx
bpaworkflow/tests/test_data/flagged/E3002_metadata_unmapped_column/: 79639_GAP_AGRF_PAE47351_metadata.xlsx
bpaworkflow/tests/test_data/flagged/E4001_md_library_id_empty/: 79639_GAP_AGRF_PAE47351_metadata.xlsx
(+12 files in other folders)
