[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bpaworkflow"
version = "2.0.15"
description = "Workflow management for Bioplatforms Australia projects"
authors = ["Grahame Bowland <grahame.bowland@qcif.edu.au>", "Matthew Mulholland <matt@redboxresearchdata.com.au>", "Mark Tearle <mark.tearle@qcif.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"
bpaingest = {path = "../bpa-ingest"}
Django = "^3.0.5"
Unipath = "^1.1"
Werkzeug = "^1.0.1"
ccg-django-utils = "^0.4.2"
django-anymail = {extras = ["amazon_ses"], version = "^7.1.0"}
django-bootstrap3 = "^12.0.3"
colorlog = "^4.1.0"
django_extensions = "^2.2.9"
psycopg2 = "^2.8.5"
django_redis = "^4.11.0"
celery = "^4.4.2"
gunicorn = "^20.0.4"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.6"
flake8 = "^3.7.9"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
